syntax = "proto3";

package usermanagement;

message Address {
  string street = 1;
  string city = 2;
  string country = 3;
  string postal_code = 4;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  bool active = 4;
  repeated string roles = 5;
  Address address = 6;
  map<string, string> metadata = 7;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
  string status = 2;
  int64 created_at = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
